# podgen

./: Cargo.toml  README.md
k8s/: Cargo.toml
k8s/src/: lib.rs
src/: cmdline.rs  info.rs  main.rs  systemctl.rs
systemctl/: Cargo.toml
systemctl/src/: lib.rs
