[package]
name = "podgen"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["k8s", "systemctl"]

[dependencies]
k8s = { path = "k8s" }

serde_yaml = "0.9"
rust-ini = "0.20" # no serde support

names = { version = "0.14", default-features = false }

clap = { version = "4", features = ["derive"] }
